# hanoi-crossing

./: README.md  pyproject.toml
examples/: contention_n2.yaml  large_n8.yaml  n1_example.yaml
src/hanoi_crossing/: __init__.py  engine.py  models.py
src/hanoi_crossing/cli/: random_play.py  replay.py
tests/: test_engine.py  test_extreme.py  test_research_insights.py
